[metadata]
name = NuageTempestPlugin
version = 0.0.1
summary = Nuage Tempest Plugin
description-file = README.rst
author = Aniket Dandekar.
author-email = aniket_abhay.dandekar@nuagenetworks.net
home-page = https://github.mv.usa.alcatel.com/aniketad/nuage-tempest
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: OpenStack Development Team
    Intended Audience :: OpenStack QA Team
    Intended Audience :: Information Technology
    Operating System :: Linux
    Natural Language :: English
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Programming Language :: Python
keywords =
    Plugin
    Tempest
    OpenStack

[entry_points]
tempest.test_plugins =
    NuageTempestPlugin = nuagetempest.plugin:NuageTempestPlugin

[pbr]
warnerrors = true
