[metadata]
name = nuagetempest
version = 0.0.1
summary = Nuage Tempest Library
description-file = README.rst
author = 
author-email = 
home-page = https://github.mv.usa.alcatel.com/pygash/nuage-tempest
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: OpenStack Development Team
    Intended Audience :: OpenStack QA Team
    Intended Audience :: Information Technology
    Operating System :: Linux
    Natural Language :: English
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Programming Language :: Python
keywords =
    Plugin
    Tempest
    OpenStack

[entry_points]
tempest.test_plugins =
    NuageTempestPlugin = nuagetempest.plugin:NuageTempestPlugin

[pbr]
warnerrors = true

